--- a/DbTimeDivider.Schema/Properties/Resources.resx
+++ b/DbTimeDivider.Schema/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Oracle_SaleByDay" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Oracle_SaleByDay.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
+  </data>
   <data name="SaleByDay" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SaleByDay.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
   </data>
